--- a/package.json
+++ b/package.json
@@ -2,5 +2,24 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongoose": "^6.4.4"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "social-network-api",
+  "description": "",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hvphan1993/social-network-api.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hvphan1993/social-network-api/issues"
+  },
+  "homepage": "https://github.com/hvphan1993/social-network-api#readme"
 }
